# artistic-git

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README_zh-CN.md  SEPC.md  TASKS.md  eslint.config.js  git-dist.toml  git-toolchain.lock.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  size-baselines.json  tsconfig.json  vite.config.ts  wdio.tauri.conf.ts
.github/workflows/: ci.yml  git-dist.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: auth_ipc.rs  branches.rs  commit.rs  conflicts.rs  fetch.rs  full_chain_e2e.rs  git_ops.rs  https_auth.rs  lib.rs  phase12_failure_hardening.rs  remote.rs  repository.rs  restore.rs  revert.rs  review.rs  settings.rs  ssh_auth.rs  stash.rs  sync.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  diff_engine.rs  history_graph.rs  keyring.rs  lib.rs  logging.rs  network.rs  realtime.rs  retry.rs
crates/git-runner/: Cargo.toml
crates/git-runner/src/: lib.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
design/: app-preview.html  preview.html
docs/: contracts.md  e2e-real-git.md  git-dist.md
docs/design/: redesign-spec.md
e2e/: tsconfig.json
e2e/tauri/: crash-isolation.e2e.ts  debug-resources.test.ts  debug-resources.ts  full-chain-real-git.e2e.ts  profile.test.ts  profile.ts  smoke.e2e.ts  start-screen.ts
scripts/: activate-phase12-git-dist.mjs  activate-phase12-git-dist.node-tests.mjs  apply-release-version.mjs  apply-release-version.node-tests.mjs  apply-tauri-updater-public-key.mjs  apply-tauri-updater-public-key.node-tests.mjs  atomic-directory-publish.mjs  atomic-directory-publish.node-tests.mjs  build-git-toolchain-helpers.mjs  build-git-toolchain-helpers.node-tests.mjs  check-accessibility-audit.mjs  check-e2e-real-ui.mjs  check-git-dist-openssh-release.mjs  check-git-dist.mjs  check-git-toolchain-config.mjs  check-i18n-audit.mjs  check-no-force-push.mjs  check-phase9-close-guard-audit.mjs  check-phase9-crash-isolation-audit.mjs  check-phase9-crash-isolation-audit.node-tests.mjs  check-privacy-network.mjs  check-privacy-network.node-tests.mjs  check-production-e2e-boundary.mjs  check-production-e2e-boundary.node-tests.mjs  check-tauri-bundle-resources.mjs  check-v1-safety-audit.mjs  e2e-build-contract.node-tests.mjs  e2e-real-git-report.mjs  e2e-real-git-report.node-tests.mjs  emit-git-toolchain-cache-key.mjs  ensure-git-toolchain.mjs  fetch-git-dist.mjs  fetch-git-dist.node-tests.mjs  generate-tauri-latest-json.mjs  git-dist-lib.mjs  git-dist-report.mjs  git-dist.node-tests.mjs  git-toolchain-state.mjs  git-toolchain-state.node-tests.mjs  optimize-macos-release-bundles.mjs  (+23 more)
src/: App.test.tsx  App.tsx  AppProviders.tsx  main.tsx  styles.css  styles.test.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/git-dist/: README.md
src-tauri/src/: lib.rs  main.rs  updater_runtime.rs
src/components/dialogs/: ConfirmDialog.tsx  CrashDetailsDialog.tsx  DetailsDialog.tsx  DialogFrame.tsx  ErrorDetailsDialog.tsx
src/components/layout/: AppErrorBoundary.tsx
src/components/sidebar/: RepositorySidebar.test.tsx  RepositorySidebar.tsx
src/components/ui/: accessibility.test.tsx  branch-select.test.tsx  branch-select.tsx  button.tsx  dismissible-panel.tsx  expandable-search.test.tsx  expandable-search.tsx  floating-panel.test.tsx  floating-panel.tsx  icon-button.tsx  overlay-scroll-area.test.tsx  overlay-scroll-area.tsx  toast-viewport.test.tsx  toast-viewport.tsx  tooltip-position.ts  tooltip.test.tsx  tooltip.tsx  truncated-text.tsx
src/features/auth/: HttpsCredentialPromptDialog.test.tsx  HttpsCredentialPromptDialog.tsx  SshPassphrasePromptDialog.test.tsx  SshPassphrasePromptDialog.tsx
src/features/conflicts/: ConflictResolutionOverlay.test.tsx  ConflictResolutionOverlay.tsx  index.ts
src/features/diff/: DiffViewer.test.tsx  DiffViewer.tsx  ImageDiff.tsx  index.ts  line-diff.ts  types.ts
src/features/history/: avatar.ts  (+8 more)
src/i18n/: LanguageProvider.tsx  format.test.tsx  format.ts  i18n.ts  resources.test.ts  resources.ts
src/lib/: dialog-layer.ts  error-details.ts  path-display.test.ts  path-display.ts  runtime-errors.ts  toast.ts
src/store/: window-store.test.tsx  window-store.tsx
src/test/: setup.ts
src/theme/: ThemeProvider.tsx
(+38 files in other folders)
