[workspace]
members = [
  "src-tauri",
  "crates/app",
  "crates/contracts",
  "crates/core",
  "crates/git-runner",
  "crates/helpers",
  "crates/test-support",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/smallmain/artistic-git"

[workspace.dependencies]
artistic-git-app = { path = "crates/app" }
artistic-git-contracts = { path = "crates/contracts" }
artistic-git-core = { path = "crates/core" }
artistic-git-git-runner = { path = "crates/git-runner" }
artistic-git-helpers = { path = "crates/helpers" }
artistic-git-test-support = { path = "crates/test-support" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "4.1.4"
specta = { version = "2.0.0-rc.25", features = ["derive", "collect"] }
specta-serde = "0.0.12"
specta-typescript = "0.0.12"
tempfile = "3"
thiserror = "2"
tauri = "2"
tauri-build = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.git-toolchain-helper]
inherits = "release"
lto = "fat"
opt-level = "z"
