[package]
name = "artistic-git-shell"
version = "0.2.5"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "artistic_git_shell"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
wdio-e2e = ["dep:tauri-plugin-wdio"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
artistic-git-app.workspace = true
artistic-git-contracts.workspace = true
artistic-git-core.workspace = true
artistic-git-git-runner.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2"
tauri-plugin-wdio = { version = "=1.2.0", optional = true }

[dev-dependencies]
tempfile.workspace = true
