[package]
name = "artistic-git-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
artistic-git-contracts.workspace = true
artistic-git-core.workspace = true
serde.workspace = true
specta.workspace = true
specta-serde.workspace = true
specta-typescript.workspace = true
tracing.workspace = true
