[package]
name = "artistic-git-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
artistic-git-contracts.workspace = true
artistic-git-core.workspace = true
artistic-git-git-runner.workspace = true
artistic-git-helpers.workspace = true
getrandom = "0.3"
interprocess = "2.4"
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
specta-serde.workspace = true
specta-typescript.workspace = true
tracing.workspace = true

[dev-dependencies]
artistic-git-test-support.workspace = true
tempfile.workspace = true
