[package]
name = "artistic-git-git-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
artistic-git-contracts.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
artistic-git-test-support.workspace = true
